Prevent hover box causing x-scrollbar to appear
Since the x scrollbar pushes the recommendation panel upward, it's possible to cause a flashing infinite loop if the mouse sits over the right-hand edge of a hover area just above the recommendations box

--- a/visualizer/style.css
+++ b/visualizer/style.css
@@ -83,6 +83,8 @@ html, body {
 
 body {
   background: var(--main-bg-color);
+  overflow-x: hidden; /* Hover box padding can overflow. Scrollbar appearing moves recommendation box. */ 
+                      /* If that causes mouse to leave hover area, scrollbar flashes on and off in loop. */
 }
 
 #front-matter {
@@ -94,7 +96,7 @@ body {
 
 #front-matter #alert {
   flex: 1 1 0px;
-  min-width: 0; /* don't consider children for min-width calcultion */
+  min-width: 0; /* don't consider children for min-width calculation */
 }
 
 #front-matter #menu {
